--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@adminjs/express": "^6.1.1",
-    "@adminjs/mongoose": "^4.1.0",
+    "@adminjs/mongoose": "^3.0.0",
     "@adminjs/nestjs": "^6.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
@@ -30,16 +30,20 @@
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
+    "@nestjs/swagger": "^8.1.0",
     "@types/multer": "^1.4.12",
-    "adminjs": "^7.8.13",
+    "adminjs": "^7.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express-formidable": "^1.2.0",
     "express-session": "^1.18.1",
     "imagekit-nestjs": "^1.2.0",
+    "install": "^0.13.0",
     "mongoose": "^8.9.1",
+    "pnpm": "^9.15.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -56,6 +60,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^6.1.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
