--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "imagekit-nestjs": "^1.2.0",
     "install": "^0.13.0",
     "mongoose": "^8.9.1",
+    "multer": "1.4.5-lts.1",
     "pnpm": "^9.15.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
